<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalProfileActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputFirstname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/firstname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname_lb"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLastname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputFirstname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputFirstname"
        app:layout_constraintTop_toBottomOf="@+id/textInputFirstname">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lastname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname_lb"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputTel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLastname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLastname"
        app:layout_constraintTop_toBottomOf="@+id/textInputLastname">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tel_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_lb"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textInputTel"
        app:layout_constraintTop_toBottomOf="@+id/textInputTel">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="ชาย" />

        <RadioButton
            android:id="@+id/ดemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="หญิง" />

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputAge"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="68dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputTel"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/radioSex"
        app:layout_constraintTop_toTopOf="@+id/radioSex">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/age_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_lb"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/type1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:text="@string/type_lb1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputAge" />

    <Button
        android:id="@+id/type2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/type_lb2"
        app:layout_constraintStart_toEndOf="@+id/type1"
        app:layout_constraintTop_toTopOf="@+id/type1" />


</android.support.constraint.ConstraintLayout>