<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/iv_register_background" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:paddingTop="45dp">

            <TextView
                android:id="@+id/tv_register_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="สมัครสมาชิก"
                android:textSize="36dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_register_header"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/et_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_lb"
                    android:inputType="text"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_register_username"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_lb"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_register_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_register_password"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_register_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_lb"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_login_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/ti_register_password_confirm"
                android:layout_marginTop="40dp"
                android:background="@drawable/bt_login_register_local"
                android:text="ดำเนินการต่อ"
                android:textColor="@color/white" />
        </RelativeLayout>



    </FrameLayout>


</LinearLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".RegisterActivity">-->
    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/textInputUsername"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="100dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent">-->

        <!--<android.support.design.widget.TextInputEditText-->

            <!--android:id="@+id/email_et"-->
            <!--android:inputType="textPersonName"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/username_lb" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/inputLayoutPassword"-->
        <!--android:layout_width="300dp"-->
        <!--app:passwordToggleEnabled="true"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--app:layout_constraintEnd_toEndOf="@+id/textInputUsername"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintStart_toStartOf="@+id/textInputUsername"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textInputUsername">-->

        <!--<android.support.design.widget.TextInputEditText-->
            <!--android:id="@+id/password_et"-->
            <!--android:inputType="textPassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/password_lb" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/inputLayoutConfirm"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--app:layout_constraintEnd_toEndOf="@+id/inputLayoutPassword"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintStart_toStartOf="@+id/inputLayoutPassword"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword"-->
        <!--app:passwordToggleEnabled="true">-->

        <!--<android.support.design.widget.TextInputEditText-->
            <!--android:id="@+id/confirm_et"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/confirm_lb"-->
            <!--android:inputType="textPassword" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<Button-->
        <!--android:id="@+id/signup_bt"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="44dp"-->
        <!--android:text="@string/register_lb"-->
        <!--android:textColor="#fff"-->
        <!--android:theme="@style/MyButton"-->
        <!--app:layout_constraintEnd_toEndOf="@+id/inputLayoutConfirm"-->
        <!--app:layout_constraintStart_toStartOf="@+id/inputLayoutConfirm"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/inputLayoutConfirm" />-->


<!--</android.support.constraint.ConstraintLayout>-->